<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_cuenta"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/right_sidebar_cuenta"/>
    <item
        android:id="@+id/nav_reservaciones"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/right_sidebar_reservaciones"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/right_sidebar_configuracion"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/right_sidebar_logout" />
</menu>