<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp">


    <ImageView
        android:id="@+id/goBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:contentDescription="@string/logo_vivian"
        android:id="@+id/wave_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/goBack"
        android:layout_marginTop="65dp"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:src="@drawable/corazon" />

    <TextView
        android:id="@+id/titulo_registro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_registrate"
        android:textSize="24sp" />

    <EditText
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:id="@+id/edtRegistroCorreo"
        app:layout_constraintTop_toBottomOf="@id/titulo_registro"
        android:layout_marginTop="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:hint="@string/correo"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <EditText
        android:inputType="textPassword"
        android:autofillHints="password"
        android:id="@+id/edtRegistroClave"
        app:layout_constraintTop_toBottomOf="@id/edtRegistroCorreo"
        android:background="@drawable/custom_input"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:hint="@string/clave"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:drawableStart="@drawable/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <EditText
        android:inputType="textPassword"
        android:autofillHints="password"
        android:id="@+id/edtRegistroClaveRepeat"
        app:layout_constraintTop_toBottomOf="@id/edtRegistroClave"
        android:background="@drawable/custom_input"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:hint="@string/repeat_clave"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:drawableStart="@drawable/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <Button
        android:id="@+id/button_registro_registrar"
        app:layout_constraintTop_toBottomOf="@id/edtRegistroClaveRepeat"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/btn_registro_registrar"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#ff384c"/>

    <Button
        android:id="@+id/button_cancelar"
        app:layout_constraintTop_toBottomOf="@id/button_registro_registrar"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/btn_cancelar"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#FB5E6E"/>





</androidx.constraintlayout.widget.ConstraintLayout>