<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    android:layout_margin="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/carrito_goback"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title_carrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/carrito_goback"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_carrito"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/title_precio_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/title_carrito"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/precio_total_carrito"
            android:text="@string/title_precio_total"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/precio_total_carrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/title_precio_total"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="300.00"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/lista_carrito_vacia"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_carrito"
            android:text="@string/text_lista_vacia"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCarrito"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/item_carrito_compras"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_confirmar_carrito"
            app:layout_constraintTop_toBottomOf="@id/title_carrito"/>

        <Button
            android:id="@+id/button_confirmar_carrito"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="-5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/btn_carrito_confirmar"
            android:backgroundTint="@color/default_pink_2"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>