<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/light_grey"
    android:background="@color/colorBackground">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="175dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/anonymous_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/all"/>



            <TextView
                android:id="@+id/textNombreProducto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="Nombre del producto todo el producto"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgProducto"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/textPrecio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/precio_producto"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textNombreProducto"
                app:layout_constraintStart_toEndOf="@id/imgProducto"/>


            <TextView
                android:id="@+id/textPrecioNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:text="49.99"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/textNombreProducto"
                app:layout_constraintStart_toEndOf="@+id/textPrecio"/>

            <TextView
                android:id="@+id/textCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/cantidad_producto"
                app:layout_constraintTop_toBottomOf="@+id/textPrecioNumero"
                app:layout_constraintStart_toEndOf="@+id/imgProducto"/>

            <EditText
                android:id="@+id/textCantidadNumero"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="20dp"
                android:focusable="false"
                android:clickable="false"
                android:background="@drawable/custom_input"
                android:text="1"
                app:layout_constraintTop_toBottomOf="@+id/textCantidad"
                app:layout_constraintStart_toEndOf="@+id/imgProducto"/>

            <ImageView
                android:id="@+id/imgMasUno"
                android:layout_width="32dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_up"
                android:layout_gravity="end|top"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textPrecio"
                app:layout_constraintStart_toEndOf="@+id/textCantidadNumero"/>

            <ImageView
                android:id="@+id/imgMenosUno"
                android:layout_width="32dp"
                android:layout_height="24dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/arrow_down"
                android:layout_gravity="end|top"
                app:layout_constraintTop_toBottomOf="@+id/imgMasUno"
                app:layout_constraintStart_toEndOf="@+id/textCantidadNumero"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addProducto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_margin="3dp"
                android:src="@drawable/add_plus"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
